Fix: RTL alignment for some header components

--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -32,12 +32,23 @@
   }
 }
 
+[dir="rtl"] {
+
+  & .menu {
+    align-items: flex-end;
+  }
+
+  & .menu-button {
+    flex-direction: row-reverse;
+  }
+}
+
 /**
  * Task count bubble which appears next to the
  * dashboard nav menu items
  */
 .menu-item .task_count {
-  margin-left: 0.25rem;
+  margin-inline-start: 0.25rem;
   padding: 0 0.25em;
   height: 1.5rem;
   min-width: 1.5rem;
